首页商品推荐板块

--- a/src/index/index.css
+++ b/src/index/index.css
@@ -261,6 +261,7 @@
 .goodsPromote-warp .floor-title {
   font-size: 18px;
   color: #000;
+  margin: 20px 0 10px;
 }
 
 .goodsPromote-warp .floor-title .color-mark {
