--- a/src/style.css
+++ b/src/style.css
@@ -15,3 +15,14 @@ input {
 img {
   border: none;
 }
+
+.tmall-logo {
+  width: 190px;
+  height: 27px;
+}
+
+.view-footer {
+  border-top: 1px solid #ccc;
+  background-color: #fff;
+  text-align: center;
+}
