--- a/src/index/index.css
+++ b/src/index/index.css
@@ -8,7 +8,8 @@
 .site-nav .sn-bd,
 .search-warp > .ant-row-flex,
 .main-warp,
-.promoteList-panel {
+.promoteList-panel,
+.goodsInfo-warp {
   min-width: 1024px;
   max-width: 1230px;
   margin: auto;
