--- a/src/store/store.css
+++ b/src/store/store.css
@@ -7,15 +7,43 @@
   padding: 10px;
 }
 
-.storeHead-warp .storeInfo-warp > div {
-  border-left: 1px solid #f0f0f0;
-  padding-left: 28px;
+.storeHead-warp .storeInfo-warp a {
+  font-size: 12px;
+  font-family: "\5b8b\4f53";
+  color: #333;
+  font-weight: bold;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100%;
 }
 
-.storeHead-warp .storeInfo-warp > div > h2 {
-  margin: 0;
-  height: 46px;
-  line-height: 46px;
+.storeHead-warp .storeInfo-warp a:hover {
+  text-decoration: underline;
+}
+
+.storeInfo-warp > div {
+  border-left: 1px solid #f0f0f0;
+  padding-left: 20px;
+  display: flex;
+  text-align: center;
+  height: 64px;
+}
+
+.storeInfo-warp .shopdsr-item {
+  color: #999;
+  width: 36px;
+  line-height: 50px;
+}
+
+.storeInfo-warp .shopdsr-item > div {
+  height: 18px;
+}
+
+.storeInfo-warp .shopdsr-score {
+  color: #ff0036;
+  font-weight: 400;
+  font-family: tahoma, arial, "\5b8b\4f53";
 }
 
 .store-warp .ant-layout {
