--- a/src/goods/goods.css
+++ b/src/goods/goods.css
@@ -54,6 +54,7 @@
     margin: 20px auto;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .goodsInfo-warp .coverImg-list li {
@@ -129,11 +130,18 @@
     line-height: 28px;
     padding: 1px;
     margin: 0 4px 4px 0;
+    position: relative;
 }
 
 .goodsInfo-warp .goodsAttrList .selectedAttr,
 .goodsInfo-warp .goodsAttrList li:hover {
     border: 1px solid #ff0036;
+}
+
+.goodsInfo-warp .goodsAttrList .disabledAttr,
+.goodsInfo-warp .goodsAttrList .disabledAttr:hover {
+    cursor: not-allowed;
+    border: 1px dashed #b8b7bd;
 }
 
 .goodsInfo-warp .goodsAttrList li span {
@@ -144,6 +152,16 @@
 .goodsInfo-warp .goodsAttrList li img {
     width: 40px;
     height: 40px;
+}
+
+.goodsInfo-warp .goodsAttrList .disabledAttr:after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: rgba(255,255,255,.7);
 }
 
 .goodsInfo-warp .ant-card-head {
