--- a/src/goods/goods.css
+++ b/src/goods/goods.css
@@ -8,12 +8,11 @@
 
 .goodsInfo-warp .imgzoom-warp {
     margin: auto;
-    border: 1px solid #eee;
+    border: 1px solid rgb(201, 201, 201);
     position: relative;
 }
 
-.goodsInfo-warp .imgzoom-warp,
-.goodsInfo-warp .ks-imagezoom-viewer {
+.goodsInfo-warp .imgzoom-warp, .goodsInfo-warp .ks-imagezoom-viewer {
     width: 420px;
     height: 420px;
 }
@@ -58,7 +57,7 @@
 }
 
 .goodsInfo-warp .coverImg-list li {
-    border: 2px solid transparent;
+    border: 2px solid #eee;
     height: 64px;
     width: 64px;
     padding: 2px;
@@ -133,13 +132,11 @@
     position: relative;
 }
 
-.goodsInfo-warp .goodsAttrList .selectedAttr,
-.goodsInfo-warp .goodsAttrList li:hover {
+.goodsInfo-warp .goodsAttrList .selectedAttr, .goodsInfo-warp .goodsAttrList li:hover {
     border: 1px solid #ff0036;
 }
 
-.goodsInfo-warp .goodsAttrList .disabledAttr,
-.goodsInfo-warp .goodsAttrList .disabledAttr:hover {
+.goodsInfo-warp .goodsAttrList .disabledAttr, .goodsInfo-warp .goodsAttrList .disabledAttr:hover {
     cursor: not-allowed;
     border: 1px dashed #b8b7bd;
 }
@@ -154,14 +151,14 @@
     height: 40px;
 }
 
-.goodsInfo-warp .goodsAttrList .disabledAttr:after{
+.goodsInfo-warp .goodsAttrList .disabledAttr:after {
     content: '';
     position: absolute;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
-    background: rgba(255,255,255,.7);
+    background: rgba(255, 255, 255, .7);
 }
 
 .goodsInfo-warp .ant-card-head {
@@ -185,8 +182,7 @@
     padding-bottom: 10px;
 }
 
-.goodsInfo-warp .ant-descriptions-item-label,
-.goodsInfo-warp .ant-descriptions-item-content {
+.goodsInfo-warp .ant-descriptions-item-label, .goodsInfo-warp .ant-descriptions-item-content {
     font-size: 12px;
 }
 
@@ -196,6 +192,10 @@
     text-overflow: ellipsis;
     overflow: hidden;
     vertical-align: bottom;
+}
+
+.goodsInfo-warp .detailImg-warp {
+    margin-top: 16px;
 }
 
 .goodsInfo-warp .detailImg-warp img {
