--- a/src/cart/cart.css
+++ b/src/cart/cart.css
@@ -17,7 +17,7 @@
 .ant-table-tbody
 > tr:hover:not(.ant-table-expanded-row)
 > td {
-    background: #e6f7ff;
+    /*background: #e6f7ff;*/
 }
 
 .cart-warp .cart-goods-img {
