--- a/src/manage/manage.css
+++ b/src/manage/manage.css
@@ -1,3 +1,11 @@
+.header {
+    background-color: #fff;
+    height: 56px;
+    line-height: 56px;
+    padding: 0 20px;
+    text-align: center;
+}
+
 .manage-content {
     margin-left: 24px;
     padding: 12px;
@@ -5,7 +13,7 @@
     min-height: 550px;
 }
 
-.manage-content>main {
+.manage-content > main {
     position: relative;
 }
 
