--- a/src/components/goodsGrid.css
+++ b/src/components/goodsGrid.css
@@ -29,7 +29,7 @@
 
 .goodsGrid-warp .goodsGrid-img {
   width: 100%;
-  max-height: 172.81px;
+  height: 172.81px;
 }
 
 .goodsGrid-warp:hover .goodsGrid-img {
