--- a/src/manage/store/index.css
+++ b/src/manage/store/index.css
@@ -5,3 +5,7 @@
 .store-goods-con .ant-descriptions-item-content {
     width: 100%;
 }
+
+.goods-sku-edit .ant-form-item{
+    margin-bottom: 1px;
+}
