・店舗ホームページと商品詳細ページで商品検索機能 ・fix some bugs

--- a/src/components/goodsGrid.css
+++ b/src/components/goodsGrid.css
@@ -21,6 +21,7 @@
   background-color: #fff;
   border: 1px solid transparent;
   max-width: 236px;
+  min-width: 236px;
 }
 
 .goodsGrid-warp:hover {
