OrderGoodsList.js fixbugs

--- a/src/index/index.css
+++ b/src/index/index.css
@@ -353,7 +353,7 @@
 }
 
 .wonderful-end {
-  background: url(//img.alicdn.com/tps/TB1wQDAPXXXXXXgaFXXXXXXXXXX-62-35.png)
+  background: url(https://img.alicdn.com/tps/TB1wQDAPXXXXXXgaFXXXXXXXXXX-62-35.png)
     no-repeat;
   width: 80px;
   height: 45px;
